# smms-cli

./: LICENSE  README.md  setup.cfg  setup.py
src/smms/: smms.py  utils.py
src/smms-cli/: apitoken.py  image.py  run.py  user.py  utils.py
