[metadata]
name = smms-cli-cascades
version = 0.0.1
author = cascades
author_email = cascadeschen@gmail.com
description = A command line HTTP client to of https://sm.ms
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cascades-sjtu/smms-cli
project_urls =
    Bug Tracker = https://github.com/cascades-sjtu/smms-cli/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src